# true_commons

./: .gitignore  Cargo.toml  HREA_CONNECTION.md  README.md  package-lock.json  package.json
dnas/true_commons_dna/workdir/: dna.yaml
documentation/: HREA_UNIT_CREATION_GUIDE.md  Implementation-sequence.md  TRUE_COMMONS_ARCHITECTURE.md  architecture.md  createunit.md  current-state-and-next-steps.md  overview.md  project-overview.md  requirements.md  specifications.md  status.md  technical-specs.md  work-in-progress.md
documentation/requirements/: requirements-old.md  use-case.md
tests/: hello-world.test.ts  package.json
ui/: package.json  svelte.config.js
ui/src/lib/: graphql_service..svelte.ts  graphql_service.svelte.ts  holochain_client_service.svelte.ts  true_commons_service.svelte.ts
ui/src/lib/components/: AgentProfileDisplay.svelte  AgentProfileForm.svelte  CommitmentCreateForm.svelte  EconomicEventCreateForm.svelte  IntentCreateForm.svelte  ProcessCreateForm.svelte  ProcessSpecificationCreateForm.svelte  ResourceCard.svelte  ResourceCreateForm.svelte  ResourceDetail.svelte  ResourcesCanvas.svelte
ui/src/lib/data/: actions.ts  index.ts  process-specifications.ts  resource-specifications.ts  units.ts
ui/src/lib/graphql/: types.ts
ui/src/lib/services/: foundation.service.svelte.ts  holochain_client_service.svelte.ts  hrea.service.svelte.ts  true_commons_service.svelte.ts
ui/src/lib/stores/: index.ts  (+10 more)
ui/src/routes/: +layout.svelte  +page.svelte
ui_old/: index.html  package.json
ui_old/src/: index.css  main.ts
workdir/: dna.yaml  happ.yaml
(+42 files in other folders)
