[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.6.3"
hdk = "=0.5.3"
holochain_serialized_bytes = "*"
serde = "1.0"

[workspace.dependencies.true_commons]
path = "dnas/true_commons_dna/zomes/coordinator/true_commons"

[workspace.dependencies.true_commons_dna]
path = "dnas/true_commons_dna/zomes/coordinator/true_commons_dna"

[workspace.dependencies.true_commons_dna_integrity]
path = "dnas/true_commons_dna/zomes/integrity/true_commons_dna"

[workspace.dependencies.true_commons_integrity]
path = "dnas/true_commons_dna/zomes/integrity/true_commons"
